re PR c++/30303 (ICE with invalid constructor definition)

2007-10-14  Andrew Pinski  <pinskia@gmail.com>

        PR c++/30303
        * decl.c (grokfndecl): Return NULL after the "definition of
        implicitly-declared" error happened.

2007-10-14  Andrew Pinski  <pinskia@gmail.com>

        PR c++/30303
        * g++.dg/other/ctor1.C: New test.
        * g++.dg/other/ctor2.C: New test.
        * g++.dg/other/dtor1.C: New test.

From-SVN: r129298